--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Pomoc", help_path %></li>
-          <li><%= link_to "Kontakt", help_path %></li>
+          <li><%= link_to "Kontakt", contact_path %></li>
 
           <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
